# rags_stragies

./: .gitignore  README.md
backend/: README.md  api_basic_rag.py  config.py  main.py  pyproject.toml  qa.py  requirements.txt  utils.py
backend/app/api/: api_basic_rag.py  api_semantic_similarity.py
backend/app/common/: config.py  utils.py
backend/app/model/: models.py
backend/app/repository/: rag_repository.py
front/: .env.development  .env.production  .env.staging  package-lock.json  package.json
front/app/: page.tsx
front/app/api/chat/: route.ts
front/app/api/split-document/: route.ts
front/app/strategies/basic-rag/code/: page.tsx
front/app/strategies/basic-rag/docs/: page.tsx
front/app/strategies/basic-rag/qa/: index.tsx  page.tsx
front/app/strategies/basic-rag/split/: page.tsx
front/app/strategies/basic-rag/tests/: index.tsx  page.tsx
front/app/strategies/hybrid-search/code/: page.tsx
front/app/strategies/hybrid-search/docs/: content.md  page.tsx
front/app/strategies/hybrid-search/qa/: index.tsx
front/app/strategies/hybrid-search/split/: index.tsx  page.tsx
front/app/strategies/multi-hop/docs/: content.md  page.tsx
front/app/strategies/multi-hop/qa/: index.tsx  page.tsx
front/app/strategies/multi-hop/split/: index.tsx  page.tsx
front/app/strategies/semantic-similarity/docs/: page.tsx
front/app/strategies/semantic-similarity/qa/: page.tsx
front/app/strategies/semantic-similarity/split/: page.tsx
front/public/docs/: basic-rag.md  semantic-similarity.md
