[project]
name = "rag-backend"
version = "0.1.0"
description = "RAG系统后端API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.poetry]
name = "rag-backend"
version = "0.1.0"
description = "RAG系统后端API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
pydantic = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
